<resources>
    <string name="app_name">MyMainApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="delivery">Delivery</string>
    <string name="credit">Credit</string>
    <string name="account">Account</string>
    <string name="order_list">Order List</string>
    <string name="_30_orders">30 Orders</string>
    <string name="order_details">Order Details</string>
    <string name="four_cheese_alfredo_sauce">Four Cheese Alfredo Sauce</string>
    <string name="_1pkt">1Pkt</string>
    <string name="farms_breaded_chicken_breast">Farms Breaded Chicken Breast</string>
    <string name="_1_kg">1 Kg</string>
    <string name="farms_breaded_chicken">Farms Breaded Chicken</string>
    <string name="_50_no">50 No</string>
    <string name="price_details">Price Details</string>
    <string name="_1200">₹ 1200</string>
    <string name="paid">Paid</string>
    <string name="customer_details">Customer Details</string>
    <string name="chembakam_h_nalukettu_road_po_koratty">Chembakam (H), Nalukettu Road, PO Koratty</string>
    <string name="return_item">Return Item</string>
    <string name="return_quantity">Return Quantity</string>
    <string name="submit">Submit</string>

    <string name="content">1.1 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris consequat.\n 1.2 These Terms and Conditions Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation\n</string>
</resources>